2006-04-11  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: 
	- Loads files by filtering out stage noise.
	- Fixed a bug in handling QPD values
	- handles files saving and loading correctly

2006-04-07  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Fixed a bug in removing time offset, when offset was zero. Corrected stagezReport to stageReport.

2006-02-03  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: cleaned up documentation and fixed a bug where log message incorrectly reported correct usage of time stamps.


2006-01-30  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: added drift velocity estimates for y to output log.

2006-01-30  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: output log now reports y's slope and intercept as well as x's.

2005-12-22  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Fixed a missing semicolon, which caused flood on the prompt when 'position error' field was sought for.

2005-12-21  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: version 1.01
	- Added option to request output fields in the form of a [time, vals] matrix rather than the traditional structure.
	- By default, the output form is the traditional structure so existing dependent code shouldn't break.
	- Wrote a routine that centralizes the parsing algorithm for different fields. Used for most of the fields.
	- Fixed several comments.

2005-12-21  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: finished implementing the center of mass drift subtraction method.

2005-12-19  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Added comments about output parameters

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m:  moved an informational message to a better place.

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>